<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendario"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_calendario" />

    <item
        android:id="@+id/navigation_actividades"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/title_actividades" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_acorn"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_comunidad"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_comunidad" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_perfil" />

</menu>
